--- a/app/views/tweet/index.html.erb
+++ b/app/views/tweet/index.html.erb
@@ -1,2 +1,28 @@
 <h1>Tweet#index</h1>
-<p>Find me in app/views/tweet/index.html.erb</p>
+<!-- <p>Find me in app/views/tweet/index.html.erb</p> -->
+<p id="notice"><%= notice %></p>
+
+<h1>Whatever, this is just a header</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Message</th>
+      <th>User</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @tweets.each do |x| %>
+      <tr>
+        <td><%= x.message %></td>
+        <td><%= x.user.username %></td>
+        <td><%= link_to 'Show', x %></td>
+        <td><%= link_to 'Edit', edit_tweet_path(x) %></td>
+        <td><%= link_to 'Destroy', x, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<br>
+<%= link_to 'New Tweet', new_tweet_path %>
