--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,45 @@
-<h1><%= @user.username %>'s Profile</h1>
 
-<% @user.tweets.each do |tweet| %>
-  <%= tweet.message %> <br />
+<%= @user.relationships.count %> Following
+  <br />
+  <% @user.relationships.each do |relationship| %>
+    <%=link_to relationship.friend.name, profile_path(relationship.friend) %>
+  <%end%>
+  <br />
+  <br />
+  <%= pluralize(@user.inverse_relationships.count, "Follower") %>.
+  <br />
+  <% @user.inverse_friends.each do |friend| %>
+    <%=link_to friend.name, profile_path(friend) %> <br />
+  <%end%>
+  </div>
+
+  <div class= "col-xs-7">
+    <div class="panel panel-default">
+      <% @user.tweets.each do |tweet| %>
+        <div class="panel-body">
+        <strong><%= tweet.user.username %> </strong><small>tweeted <%= time_ago_in_words(tweet.created_at) %> ago</small>
+        <br />
+        <br />
+        <%= tweet.message %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+<br />
+<br />
+
+
+  <% if current_user.id != @user.id %>
+  <% if current_user.friends.include?(@user) %>
+
+  <%= link_to "Unfollow", relationship_path(current_user.
+  relationships.find_by_friend_id(@user)), :method => :delete %>
+
+<% else %>
+
+
+  <%= link_to "Follow", relationships_path(friend_id: @user), method: :post %>
+
+
 <% end %>
