--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,16 @@
+<h1> <%= @user.username %>'s Profile</h1>
+
+<% @user.tweets.each do |tweet| %>
+  <%= tweet.message %> <br />
+<% end %>
+
+<div class="row">
+  <div class= "col-xs-4">
+  <h3><%= @user.name %></h3>
+  <h5><%= @user.username %></h5>
+  <h5><p><%= @user.bio %></p></h5>
+  <h5><%= @user.location %></h5>
+  <h5>Joined on <%= @user.created_at.strftime("%B %Y") %></h5>
 
 <%= @user.relationships.count %> Following
   <br />
@@ -39,7 +52,7 @@
 <% else %>
 
 
-  <%= link_to "Follow", relationships_path(friend_id: @user), method: :post %>
+  <%= link_to "Follow", relationships_path(friend_id => @user), method: :post %>
 
 
 <% end %>
