--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,7 +1,31 @@
 <h1>New Tweet</h1>
 
-<%= render "form" %>
-
 <%= link_to 'Show', @tweet %>
+<%= form_for(@tweet) do |f| %>
+<% if @tweet.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
 
+      <ul>
+        <% @tweet.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :message %><br>
+    <%= f.text_field :message %>
+  </div>
+  <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id, value: current_user.id %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
      <%= link_to 'back', tweets_path %>
+     <%= link_to "Like", tweets_path %>
+     <%= link_to "unLike", tweets_path %>
