--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -27,5 +27,5 @@
   </div>
 <% end %>
      <%= link_to 'back', tweets_path %>
-     <%= link_to "Like", tweets_path %>
-     <%= link_to "unLike", tweets_path %>
+     <!-- <%= link_to "Like", tweets_path %>
+     <%= link_to "unLike", tweets_path %> -->
