--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -28,5 +28,5 @@
 <%= link_to 'New Tweet', new_tweet_path, class: "btn btn-primary" %>
 
 <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
-<%= link_to "Like", '...', class: 'vote', method: :put, remote: true %>
-<%= link_to "unLike", '...', class: 'vote', method: :put, remote: true %>
+<!-- <%= link_to "Like", '...', class: 'vote', method: :put, remote: true %>
+<%= link_to "unLike", '...', class: 'vote', method: :put, remote: true %> -->
