--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,5 +1,9 @@
 <h1>Edit you Tweet</h1>
 
-<% link_to 'Show' @tweet %>
+
+<%= render "form" %>
+
+
+<% link_to 'Show', @tweet %>
 
 <% link_to 'back', tweets_path %>
